--- a/src/html/includes/navbar.pug
+++ b/src/html/includes/navbar.pug
@@ -6,7 +6,7 @@ mixin navItem(linkName, linkUrl)
     a(class="nav-link", href=linkUrl)= linkName
 
 nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
-  a(class="navbar-brand" href="index.html") Gen 1 Catch Rate Calculator
+  a(class="navbar-brand" href="index.html") Gen 1 DV Calculator
   button(class="navbar-toggler"
     type="button"
     data-toggle="collapse"
