change some styling with the up down arrows

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,2 +1,2 @@
-.customBox{color:#002395}
+input::-webkit-inner-spin-button,input::-webkit-outer-spin-button{-webkit-appearance:none;margin:0}input[type=number]{-moz-appearance:textfield}
 /*# sourceMappingURL=../maps/styles.css.map */
