--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,5 +1,11 @@
 @import "modules/colors.scss";
 
-.customBox {
-    color: $macatawa-blue;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
 }
