--- a/src/html/includes/head.pug
+++ b/src/html/includes/head.pug
@@ -2,7 +2,7 @@ doctype html
 head
   meta(charset="utf-8")
   title= `Pokemon Speedrunning - ${pageTitle}`
-  meta(name="description" content="Gen 1 Catch Rate Calculator")
+  meta(name="description" content="Pokemon Gen 1-2 DV Calculator")
   meta(name="viewport" content="width=device-width, initial-scale=1")
   link(rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
