--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -13,3 +13,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance:textfield;
 }
+
+button.btn.btn-primary {
+    border-color: #0069d9;
+}
