--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,2 +1,2 @@
-body{padding-bottom:87px}input::-webkit-inner-spin-button,input::-webkit-outer-spin-button{-webkit-appearance:none;margin:0}input[type=number]{-moz-appearance:textfield}
+body{padding-bottom:87px}input::-webkit-inner-spin-button,input::-webkit-outer-spin-button{-webkit-appearance:none;margin:0}input[type=number]{-moz-appearance:textfield}button.btn.btn-primary{border-color:#0069d9}
 /*# sourceMappingURL=../maps/styles.css.map */
