--- a/src/html/pages/index.pug
+++ b/src/html/pages/index.pug
@@ -4,7 +4,7 @@ include ../includes/bootstrap_mixins
 mixin statRow(label)
   .col-2(data-statType=label.toLowerCase())
     p.h6=label
-    .btn-group-vertical(role="group" aria-label=`Possible ${label.toLowerCase()} stats`)
+    .btn-group-vertical.btn-group-lg(role="group" aria-label=`Possible ${label.toLowerCase()} stats`)
 
 mixin dvRow(label)
   .col-2(data-dvType=label.toLowerCase())
@@ -18,15 +18,16 @@ append pageContent
   .container
     h1 Pokemon Yellow DV Calculator
     p.lead For use with Glitchless Classic Speedruns
-    hr
-    p.h3 Possible DVs
-    .row
-      +dvRow("HP")
-      +dvRow("Attack")
-      +dvRow("Defense")
-      +dvRow("Speed")
-      +dvRow("Special")
-    hr
+  .border-top.border-bottom.pt-2.bg-light
+    .container
+      p.h3 Possible DVs
+      .row
+        +dvRow("HP")
+        +dvRow("Attack")
+        +dvRow("Defense")
+        +dvRow("Speed")
+        +dvRow("Special")
+  .container
     p.lead Click a Stat to Narrow Possible DVs
     .row.dvButtons
       +statRow("HP")
@@ -34,19 +35,20 @@ append pageContent
       +statRow("Defense")
       +statRow("Speed")
       +statRow("Special")
-    .fixed-bottom.container
+    .fixed-bottom.bg-light
       hr
-      .row
-        .form-group
-          label.col-form-label(for="level") Nido's Level
-        .input-group.form-group.col-6.col-md-3
-          .input-group-prepend
-            button.btn.btn-primary(type="button" id="decrementLevel") -
-          input.form-control(type="number" id="level" value=6 min=6 max=23)
-          .input-group-append
-            button.btn.btn-primary(type="button" id="incrementLevel") +
-        .form-group.col-3
-          button.btn.btn-danger(type="button" id="reset") Reset!
+      .container
+        .row
+          .form-group
+            label.col-form-label(for="level") Nido's Level
+          .input-group.form-group.col-6.col-md-3
+            .input-group-prepend
+              button.btn.btn-primary(type="button" id="decrementLevel") -
+            input.form-control(type="number" id="level" value=6 min=6 max=23)
+            .input-group-append
+              button.btn.btn-primary(type="button" id="incrementLevel") +
+          .form-group.col-3
+            button.btn.btn-danger(type="button" id="reset") Reset!
 
 append pageScripts
   script(src="js/main.js")
