basic support for Red DVs (todo: levels 15-23 and encounter kills)

--- a/src/html/includes/navbar.pug
+++ b/src/html/includes/navbar.pug
@@ -18,3 +18,5 @@ nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
   div(class="collapse navbar-collapse", id="navbarSupportedContent")
     ul(class="navbar-nav mr-auto")
       +navItem("Home", "index.html")
+      +navItem("Red Classic", "red.html")
+      +navItem("Yellow Classic", "yellow.html")
