--- a/src/html/pages/index.pug
+++ b/src/html/pages/index.pug
@@ -12,43 +12,9 @@ mixin dvRow(label)
     p.dvRange
 
 prepend pageStyles
-  - var pageTitle = "Gen 1 DVs"
+  - var pageTitle = "Red Classic DVs"
 
 append pageContent
   .container
-    h1 Pokemon Yellow DV Calculator
+    h1 Gen 1 DV Calculators
     p.lead For use with Glitchless Classic Speedruns
-  .border-top.border-bottom.pt-2.bg-light
-    .container
-      p.h3 Possible DVs
-      .row
-        +dvRow("HP")
-        +dvRow("Attack")
-        +dvRow("Defense")
-        +dvRow("Speed")
-        +dvRow("Special")
-  .container
-    p.lead Click a Stat to Narrow Possible DVs
-    .row.dvButtons
-      +statRow("HP")
-      +statRow("Attack")
-      +statRow("Defense")
-      +statRow("Speed")
-      +statRow("Special")
-    .fixed-bottom.bg-light
-      hr
-      .container
-        .row
-          .form-group
-            label.col-form-label(for="level") Nido's Level
-          .input-group.form-group.col-6.col-md-3
-            .input-group-prepend
-              button.btn.btn-primary(type="button" id="decrementLevel") -
-            input.form-control(type="number" id="level" value=6 min=6 max=23)
-            .input-group-append
-              button.btn.btn-primary(type="button" id="incrementLevel") +
-          .form-group.col-3
-            button.btn.btn-danger(type="button" id="reset") Reset!
-
-append pageScripts
-  script(src="js/main.js")
