Fix index page title

--- a/src/html/pages/index.pug
+++ b/src/html/pages/index.pug
@@ -12,7 +12,7 @@ mixin dvRow(label)
     p.dvRange
 
 prepend pageStyles
-  - var pageTitle = "Red Classic DVs"
+  - var pageTitle = "Gen 1 Classic DVs"
 
 append pageContent
   .container
